[package]
name = "mdschance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
evdev = {version = "0.12.1", features = ["tokio"]}
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"

